<resources>
    <string name="app_name">TheOneApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotes">Quotes</string>
    <string name="title_activity_character_description">CharacterDescriptionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget</string>
    <string name="budget2">Budget:</string>
    <string name="boxoffice">BoxOffice</string>
    <string name="runtime2">Runtime</string>
    <string name="nominations">Nominations</string>
    <string name="awards">Awards</string>
    <string name="score">Score</string>
    <string name="details">Details</string>
    <string name="height">Height</string>
    <string name="race">Race</string>
    <string name="gender">Gender</string>
    <string name="birth">Birth</string>
    <string name="spouse">Spouse</string>
    <string name="death">Death</string>
    <string name="realm">Realm</string>
    <string name="hair">Hair</string>
    <string name="click_to_see_quotes">Click to see quotes</string>
    <string name="chapters">Chapters</string>
    <string name="no_quotes_found">No quotes found</string>
    <string name="new_quotes">Quotes</string>
</resources>